redirect to enricodeleo.com until I make a better webpage dedicated to github

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0; url=http://enricodeleo.com/" />
+  <title>Enrico Deleo</title>
+</head>
+<body>
+
+</body>
+</html>
