--- a/jqlouds/index.html
+++ b/jqlouds/index.html
@@ -95,7 +95,7 @@ $('#sky').jQlouds({
   <!-- scripts -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
   <script src="prettify.js"></script>
-  <script src="jqlouds.min.js"></script>
+  <script src="jquery.jqlouds.min.js"></script>
   <script src="main.js"></script>
 
 </body>
